<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="WeatherApp"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="Settings"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:autoText="true"
            android:background="#4A47A3"
            android:fadingEdge="horizontal|vertical"
            android:gravity="center"
            android:text="Temparature Unit"
            android:textAlignment="gravity"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#84FFFF" />

        <RadioGroup
            android:id="@+id/temperature_standard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checkedButton="@+id/fahrenheit"
            android:forceDarkAllowed="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/fahrenheit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fahrenheit" />

            <RadioButton
                android:id="@+id/celsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Celsius" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:autoText="true"
            android:background="#4A47A3"
            android:fadingEdge="horizontal|vertical"
            android:gravity="center"
            android:text="Mode"
            android:textAlignment="gravity"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#84FFFF" />

        <Switch
            android:id="@+id/setting_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" Dark" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Done" />

    </LinearLayout>
</LinearLayout>
